# repository-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/: add.py  multiply.py  subtract.py
tests/: test_add.py  test_multiply.py  test_subtract.py
